<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/background_white_bordered"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/text_popup_context_menu"
        android:textColor="@color/grey_900"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_archived_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_edit_text"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingStart="16dp"
        android:paddingRight="16dp"
        android:paddingEnd="16dp"
        android:hint="@string/hint_archived_name" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp">

        <TextView
            android:id="@+id/tv_archived"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/selector_button_background_01"
            android:paddingBottom="8dp"
            android:paddingEnd="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:text="@string/text_archived"
            android:textColor="@color/color_state_button_text_archived"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_toLeftOf="@id/tv_archived"
            android:layout_toStartOf="@id/tv_archived"
            android:background="@drawable/selector_button_background_01"
            android:paddingBottom="8dp"
            android:paddingEnd="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:text="@string/text_cancel"
            android:textColor="@color/color_state_button_text_cancel"
            android:textStyle="bold" />
    </RelativeLayout>

</LinearLayout>