<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="4dp"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_avatar"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:scaleType="centerCrop"
                android:src="@drawable/sp_avatar" />

            <RelativeLayout
                android:id="@+id/block_post_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_toEndOf="@id/iv_avatar"
                android:layout_toRightOf="@id/iv_avatar"
                android:gravity="center"
                android:minHeight="48dp">

                <TextView
                    android:id="@+id/tv_nickname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sp_text_nickname"
                    android:textColor="@color/grey_900"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_nickname"
                    android:layout_marginTop="4dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_post_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sp_text_post_time"
                        android:textColor="@color/grey_600"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tv_post_time_dot"
                        android:layout_width="16dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/symbol_middle_dot"
                        android:textColor="@color/grey_800"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tv_post_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sp_text_post_location"
                        android:textColor="@color/grey_600"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tv_post_location_dot"
                        android:layout_width="16dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/symbol_middle_dot"
                        android:textColor="@color/grey_800"
                        android:textSize="12sp" />

                    <ImageView
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:alpha="0.5"
                        android:src="@drawable/sp_ico_public" />
                </LinearLayout>
            </RelativeLayout>

            <ImageView
                android:id="@+id/iv_option"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/selector_button_pressed_rounded"
                android:clickable="true"
                android:padding="4dp"
                android:src="@drawable/sp_ico_option" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tv_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/sp_text_status" />

        <ImageView
            android:id="@+id/iv_photo"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_marginTop="8dp"
            android:scaleType="centerCrop"
            android:src="@drawable/thumbnail" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_like_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sp_text_like_count"
                android:textColor="@color/grey_700"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_like_count_dot"
                android:layout_width="16dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/symbol_middle_dot"
                android:textColor="@color/grey_800"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_dislike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sp_text_dislike"
                android:textColor="@color/grey_700"
                android:textSize="12sp" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="8dp"
            android:background="@color/grey_300" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_like"
                android:layout_width="0dp"
                android:layout_height="24dp"
                android:layout_weight="1"
                android:clickable="true"
                android:src="@drawable/selector_icon_like" />

            <ImageView
                android:id="@+id/iv_comment"
                android:layout_width="0dp"
                android:layout_height="24dp"
                android:layout_weight="1"
                android:scaleType="centerInside"
                android:src="@drawable/sp_ico_write" />

            <ImageView
                android:id="@+id/iv_share"
                android:layout_width="0dp"
                android:layout_height="24dp"
                android:layout_weight="1"
                android:scaleType="centerInside"
                android:src="@drawable/sp_ico_share" />

            <ImageView
                android:id="@+id/iv_dislike"
                android:layout_width="0dp"
                android:layout_height="24dp"
                android:layout_weight="1"
                android:scaleType="centerInside"
                android:src="@drawable/sp_ico_dislike" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>